src/test/resources/public/input/typechecking/pass/pass_Magda02.jova
class Cls{

	public int func(int x){
		return 2+5+7;
	}
}