src/test/resources/public/input/typechecking/fail/double_decl/fail11.jova
class Test{
  Test (int x, int x){
  }
}